src/runtime/tests/data/positive/int.hsh
std.assert(std.int(1) == 1)
std.assert(std.int(1.0) == 1)
std.assert(std.int("1") == 1)
