src/runtime/tests/data/negative/type.hsh
let type = std.type(function() 1 end())
std.assert(type == "function")
